--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 *{
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: Roboto, sans-serif;
 }
 
@@ -44,7 +45,7 @@ header{
 .welcome-content{
   display: flex;
   flex-direction: column;
-  gap: 0.5em;
+  gap: 10px;
 }
 
 .welcome-content h1{
@@ -69,6 +70,7 @@ header{
   border-radius: 8px;
   width: 120px;
   font-size: 18px;
+  margin-top: 10px;
 }
 
 .placeholder{
