--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 header{
-  padding: 0px 207px;
+  padding: 0px 13em;
   background-color: #1f2937;
 }
 
@@ -37,7 +37,7 @@ header{
 
 .header-content{
   display: flex;
-  padding: 9em 0px;
+  padding: 7em 0px 8em 0px;
   justify-content: center;
   align-items: center;
 }
@@ -82,4 +82,69 @@ header{
   flex-shrink: 0;
   width: 50%;
   color: whitesmoke;
+}
+
+.content{
+  padding: 2em 13em 6em 13em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.content h2{
+  font-size: 32px;
+  font-weight: 800;
+  color: #1f2937;
+  margin-bottom: 2em;
+}
+
+.content-container{
+  display: flex;
+  gap: 1em;
+}
+
+.square{
+  border: 4px solid #3882f6;
+  border-radius: 20px;
+  height: 170px;
+  width: 170px;
+}
+
+.items{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  color: lightslategrey;
+  max-width: 200px;
+  gap: 4px;
+  font-size: 18px;
+}
+
+.quote {
+  padding: 7em 13em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e5e7eb;
+}
+
+.phrase{
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 100;
+}
+
+.author{
+  font-size: 24px;
+  color: #1f2937;
+  font-weight: bolder;
+}
+
+.quote-container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 80%;
 }
