--- a/styles.css
+++ b/styles.css
@@ -148,3 +148,50 @@ header{
   align-items: flex-end;
   width: 75%;
 }
+
+.content02{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 7em 13em;
+}
+
+.blue-content{
+  background-color: #3882f6;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: .5em;
+  width: 100%;
+  padding: 3em;
+}
+
+.calltoaction {
+  color:#f9faf8;
+  font-size: 24px;
+  font-weight: 550;
+}
+
+.call-text{
+  color:#e5e7eb;
+  opacity: 85%;
+  font-size: 18px;
+}
+
+.container-right button{
+  border: 2px solid white;
+  padding: 8px 2em;
+  background-color: #3882f6;
+  border-radius: 10px;
+  color: #f9faf8;
+  font-size: 18px;
+  font-weight: 550;
+}
+
+footer{
+  background-color: #1f2937;
+}
+
+footer p{
+  color: #e5e7eb;
+}
